--- a/assets/style.css
+++ b/assets/style.css
@@ -23,3 +23,20 @@ h2{
     color: #000;
     font-size: 35px;
 }
+
+label{
+    color: blue;
+    font-size: 15px;
+    font-weight: 600px;
+    margin-bottom: 15px;
+}
+
+input, textarea{
+    padding: 16px 25px;
+    border-radius: 25px;
+    margin-bottom: 20px;
+    background-color: aliceblue;
+    border: 2px solid aliceblue;
+    color: blue;
+    outline: none;
+}
