--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,8 @@
+body{
+background: rgb(63,94,251);
+background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,86,1) 100%);
+}
+
 .login{
     min-height: 100vh;
     display: flex;
@@ -25,7 +30,7 @@ h2{
 }
 
 label{
-    color: blue;
+    color: black;
     font-size: 15px;
     font-weight: 600px;
     margin-bottom: 15px;
@@ -37,6 +42,6 @@ input, textarea{
     margin-bottom: 20px;
     background-color: aliceblue;
     border: 2px solid aliceblue;
-    color: blue;
+    color: black;
     outline: none;
 }
