--- a/assets/style1.css
+++ b/assets/style1.css
@@ -7,21 +7,23 @@ header {
   }
 
   .section-contact {
+    padding-block: 200px;
     border: 10px solid #fc4656;
     border-radius: 20px;
     margin: 10px auto;
-    padding: 200px;
+    padding-inline: 100px;
     text-align: left;
-    max-width: 100px;
+    height: 20px;
+    max-width: 500px;
     display: flex;
-    flex-direction: column;
+   flex-direction: column;
     align-items: center;
     justify-content: center;
   }
 
   .contenedor{
     display: inline-grid;
-    margin-left: 200x;
+    margin-left: 300px;
     margin-top: 50px;
   }
 
@@ -49,3 +51,24 @@ header {
     grid-row-end: 3;
 }
 
+nav {
+    padding: 10px;
+    text-align: left;
+  }
+  
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  li {
+    display: inline-block;
+    margin-right: 10px;
+  }
+
+  li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 5px;
+  }
