Le agregamos botones a los divs donde eso nos llevara a otra pagina para poder obtener mas infomacion sobre los contactos y finaliamos la sigueinte pagina

--- a/assets/style1.css
+++ b/assets/style1.css
@@ -72,3 +72,11 @@ nav {
     text-decoration: none;
     padding: 5px;
   }
+
+  #num{
+    height: 200px;
+    width: 200px;
+    border-radius: 15px;
+    background-color: #ed4d69;
+
+  }
