--- a/assets/style3.css
+++ b/assets/style3.css
@@ -38,7 +38,8 @@ body {
     display: none;
     background: black;
     border-radius: 25px;
-    max-width: 100%;
+    width: 1000px;
+    height: 500px;
   }
 
   .Detalle2 {
@@ -46,4 +47,39 @@ body {
     background: black;
     border-radius: 25px;
     max-width: 100%;
+  }
+
+  /* Estilos específicos para dispositivos pequeños (hasta 600px de ancho) */
+
+@media screen and (max-width: 600px) {
+    .contenedor {
+        flex-direction: column;
+        align-items: center;
+        margin-left: 10px;
+    }
+  
+    .section-contact {
+        padding: 20px;
+        margin: 10px;
+    }
+  
+    .Detalle1 {
+        width: 80%;
+    }
+  }
+  
+  /* Estilos específicos para dispositivos medianos (entre 601px y 1200px de ancho) */
+  
+  @media screen and (min-width: 601px) and (max-width: 1200px) {
+    .contenedor {
+        margin-left: 50px;
+    }
+  
+    .section-contact {
+        padding: 30px;
+    }
+  
+    .Detalle1 {
+        width: 60%;
+    }
   }
