--- a/assets/style4.css
+++ b/assets/style4.css
@@ -1,2 +1,11 @@
+body{
+    background: rgb(63,94,251);
+    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,86,1) 100%);;
+}
 
-    
+.user{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
