Le agregamos un marco a nuestra informacion para que la informacion se almacene en ese lugar

--- a/assets/style4.css
+++ b/assets/style4.css
@@ -9,3 +9,17 @@ body{
     align-items: center;
     justify-content: center;
 }
+
+form{
+    padding: 50px 55px;
+    box-shadow:  0 0 20px rgb(0, 0, 0, 0.2); 
+    border-radius: 20px;
+    text-align: center;
+    width: 330;
+}
+
+.input-group{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
