--- a/assets/style4.css
+++ b/assets/style4.css
@@ -23,3 +23,24 @@ form{
     flex-direction: column;
     text-align: left;
 }
+
+h2{
+    color: #000;
+    font-size: 35px;
+}
+
+label{
+    color: black;
+    font-size: 15px;
+    font-weight: 600px;
+    margin-bottom: 15px;
+}
+
+input{
+    padding: 16px 25px;
+    border-radius: 25px;
+    background-color: aliceblue;
+    border: 2px solid aliceblue;
+    color: black;
+    outline: none;
+}
