--- a/assets/style5.css
+++ b/assets/style5.css
@@ -1,11 +1,43 @@
 body{
-    width: 50%;
+    width: 100%;
     margin: 0 auto;
     font-family: 'Times New Roman', Times, serif;
 }
 
+header {
+    background: rgb(63,94,251);
+    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,86,1) 100%);
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+  }
+
+  nav {
+    padding: 10px;
+    text-align: left;
+  }
+  
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  li {
+    display: inline-block;
+    margin-right: 10px;
+  }
+  
+  li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 5px;
+  }
+
 .contenedor{
     width: 360px;
+    margin: 0 auto;
+    margin-top: 100px;
 }
 
 #inicio{
@@ -15,6 +47,7 @@ body{
     outline: none;
     font-size: 25px;
     vertical-align: middle;
+   
 }
 
 #agregarTO{
@@ -23,6 +56,7 @@ body{
     border: 1px solid black;
     vertical-align: middle;
     font-size: 30px;
+    background-color: red;
 }
 
 .to-dos{
