--- a/assets/style1.css
+++ b/assets/style1.css
@@ -77,6 +77,7 @@ li a {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
 }
 
 form{
@@ -131,6 +132,7 @@ input{
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
 }
 
 .Detalle3 {
@@ -149,6 +151,7 @@ input{
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
 }
 
 .Detalle4 {
@@ -167,6 +170,7 @@ input{
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
 }
 
 .Detalle5 {
@@ -185,6 +189,7 @@ input{
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
 }
 
 /* Estilos específicos para dispositivos pequeños (hasta 600px de ancho) */
