--- a/assets/style3.css
+++ b/assets/style3.css
@@ -11,6 +11,31 @@ body {
     text-align: center;
   }
 
+  nav {
+    padding: 10px;
+    text-align: left;
+  }
+  
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  li {
+    display: inline-block;
+    margin-right: 10px;
+  }
+  
+  li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 5px;
+  }
+
+button:hover{
+    background-color: gray;
+}
   
 .header-content {
   display: flex;
@@ -57,6 +82,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
 }
 
 form{
@@ -111,6 +137,7 @@ input{
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
 }
 
 
